<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#D5ECF6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:background="@color/material_dynamic_secondary20"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_secondary20"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="60dp"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPostalAddress"
        android:scaleType="center"
        android:minHeight="60dp"
        android:hint="@string/hint_address" />

    <EditText
        android:id="@+id/profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="60dp"
        android:hint="@string/hint_profession" />

    <EditText
        android:id="@+id/dreamJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="60dp"
        android:hint="@string/hint_dream_job" />

    <EditText
        android:id="@+id/favoriteFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="60dp"
        android:hint="@string/hint_favorite_food" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/material_dynamic_secondary20"
        android:text="@string/submit" />

    <!-- Add fragment at the bottom -->
<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/FirstForm"-->
<!--        android:name="com.kristina.kristinakhristi_mapd711_assign1.FirstFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="350dp"-->
<!--        android:background="#99CC00"-->
<!--        android:layout_marginTop="16dp"-->
<!--        />-->

</LinearLayout>